Completed login page but have same issue for viewing height items overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -13,27 +13,3 @@ h2 {
 p {
   font-size: 1.2vw;
 }
-
-@media screen and (max-width: 1400px) {
-  h1 {
-    font-size: 10vw;
-  }
-  h2 {
-    font-size: 4vw;
-  }
-  p {
-    font-size: 4vw;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  h1 {
-    font-size: 10vw;
-  }
-  h2 {
-    font-size: 4vw;
-  }
-  p {
-    font-size: 4vw;
-  }
-}
