--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -72,41 +72,6 @@ body {
   padding-bottom: 5vh;
 }
 
-.footer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  background-color: rgba(103, 103, 103, 1);
-}
-
-.logo-container-footer {
-  display: flex;
-  justify-content: flex-start;
-}
-
-.footer img {
-  align-self: center;
-  opacity: 75%;
-}
-
-.footer h1 {
-  font-size: 1.2vw;
-  color: rgba(255, 255, 255, 0.75);
-  align-self: center;
-}
-
-.footer-feedback {
-  align-self: center;
-  color: rgba(255, 255, 255, 0.75);
-  font-weight: 400;
-}
-
-.footer-slogan {
-  align-self: center;
-  color: rgba(255, 255, 255, 0.75);
-  font-weight: 400;
-}
-
 @media screen and (max-width: 1400px) {
   .landing-page-redirect {
     background-image: url(../images/mobile-landing-page-image.png);
